--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ charset-normalizer==3.4.1
 Django==5.1.4
 django-cors-headers==4.7.0
 django-filter==25.1
+django-shortuuidfield==0.1.3
 djangorestframework==3.15.2
 djangorestframework_simplejwt==5.4.0
 drf-spectacular==0.28.0
@@ -21,6 +22,8 @@ PyYAML==6.0.2
 referencing==0.36.2
 requests==2.32.3
 rpds-py==0.23.1
+shortuuid==1.0.13
+six==1.17.0
 sqlparse==0.5.3
 typing_extensions==4.12.2
 uritemplate==4.1.1
