--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,10 @@
+antiorm==1.2.1
 asgiref==3.8.1
 attrs==25.1.0
 certifi==2025.1.31
 charset-normalizer==3.4.1
+db==0.1.1
+db-sqlite3==0.0.1
 Django==5.1.4
 django-cors-headers==4.7.0
 django-filter==25.1
